# Forth

./: .gitignore  CMakeLists.txt  Evaluatable.h  Interpreter.cpp  Interpreter.h  MyLanguage.sln  MyLanguage.vcxproj  Value.cpp  Value.h  arithmetic.cpp
compiler/: Forth.hpp
grammar/: Forth.g4  build.sh  grammar.g4
